fixed AllTransitionStateAlgorithm, also generator